@@ -63,17 +63,20 @@ current platform.}
 
 \latexignore{\rtfignore{\wxheading{Members}}}
 
+
 \membersection{wxTaskBarIcon::wxTaskBarIcon}\label{wxtaskbariconctor}
 
 \func{}{wxTaskBarIcon}{\void}
 
 Default constructor.
 
+
 \membersection{wxTaskBarIcon::\destruct{wxTaskBarIcon}}\label{wxtaskbaricondtor}
 
 \func{}{\destruct{wxTaskBarIcon}}{\void}
 
 Destroys the wxTaskBarIcon object, removing the icon if not already removed.
+
 
 \membersection{wxTaskBarIcon::CreatePopupMenu}\label{wxtaskbariconcreatepopupmenu}
 
@@ -88,17 +91,30 @@ no menu is shown, otherwise the menu is
 displayed and then deleted by the library as soon as the user dismisses it.
 The events can be handled by a class derived from wxTaskBarIcon.
 
+
+\membersection{wxTaskBarIcon::Destroy}\label{wxtaskbaricondestroy}
+
+\func{void}{Destroy}{\void}
+
+This method is similar to \helpref{wxWindow::Destroy}{wxwindowdestroy} and can
+be used to schedule the task bar icon object for the delayed destruction: it
+will be deleted during the next event loop iteration, which allows the task bar
+icon to process any pending events for it before being destroyed.
+
+
 \membersection{wxTaskBarIcon::IsIconInstalled}\label{wxtaskbariconisiconinstalled}
 
 \func{bool}{IsIconInstalled}{\void}
 
 Returns true if \helpref{SetIcon}{wxtaskbariconseticon} was called with no subsequent \helpref{RemoveIcon}{wxtaskbariconremoveicon}.
 
+
 \membersection{wxTaskBarIcon::IsOk}\label{wxtaskbariconisok}
 
 \func{bool}{IsOk}{\void}
 
 Returns true if the object initialized successfully.
+
 
 \membersection{wxTaskBarIcon::PopupMenu}\label{wxtaskbariconpopupmenu}
 
@@ -114,11 +130,13 @@ It is recommended to override
 callback instead of calling this method from event handler, because some
 ports (e.g. wxCocoa) may not implement PopupMenu and mouse click events at all.
 
+
 \membersection{wxTaskBarIcon::RemoveIcon}\label{wxtaskbariconremoveicon}
 
 \func{bool}{RemoveIcon}{\void}
 
 Removes the icon previously set with \helpref{SetIcon}{wxtaskbariconseticon}.
+
 
 \membersection{wxTaskBarIcon::SetIcon}\label{wxtaskbariconseticon}
 
